--- a/trunk/siak/web/WEB-INF/pages/administrasi/mahasiswa/pageKursus.zul
+++ b/trunk/siak/web/WEB-INF/pages/administrasi/mahasiswa/pageKursus.zul
@@ -36,7 +36,8 @@
                                     <paging id="pagingRiwayatKursus" style="width:100%" pageSize="20"/>
                                 </north>
                                 <center border="none">
-                                    <listbox id="listRiwayatKursus" width="100%" height="100%" multiple="false">
+                                    <listbox id="listRiwayatKursus"
+                                             width="100%" height="100%" vflex="true" multiple="false">
                                         <listhead sizable="true">
                                             <listheader id="cno" sort="auto" width="5%" label="No"/>
                                             <listheader id="cnmkursus" sort="auto" width="20%" label="Nama Kursus"/>
@@ -71,7 +72,8 @@
                                     <paging id="pagingRiwayatBahasa" style="width:100%" pageSize="20"/>
                                 </north>
                                 <center border="none">
-                                    <listbox id="listRiwayatBahasa" width="100%" height="100%" multiple="false">
+                                    <listbox id="listRiwayatBahasa"
+                                             width="100%" height="100%" vflex="true" multiple="false">
                                         <listhead sizable="true">
                                             <listheader id="cnob" sort="auto" width="5%" label="No"/>
                                             <listheader id="cnmbahasab" sort="auto" width="30%" label="Bahasa"/>
