--- a/trunk/siak/web/WEB-INF/pages/administrasi/mahasiswa/pagePekerjaan.zul
+++ b/trunk/siak/web/WEB-INF/pages/administrasi/mahasiswa/pagePekerjaan.zul
@@ -16,7 +16,7 @@
                 <panel border="none">
                     <panelchildren>
                         <groupbox mold="3d" closable="false" style="height:100%; ">
-                            <caption image="/images/icons/view.gif" label="Pekerjaan &amp; Prestasi"/>
+                            <caption image="/images/icons/view.gif" label="Pekerjaan"/>
                             <grid sclass="GridLayoutNoBorder" fixedLayout="true"
                                   style="border:0px; padding-left:5px; padding-right:5px; ">
                                 <columns>
@@ -110,7 +110,11 @@
                                         <paging id="pagingPrestasi" style="width:100%" pageSize="20"/>
                                     </north>
                                     <center border="none">
-                                        <listbox id="listPrestasi" width="100%" height="100%" multiple="false" style="border-top-width: 0px; border-left-width: 0px; border-right-width: 0px; border-bottom-width: 1px;">
+                                        <listbox id="listPrestasi"
+                                                 width="100%" height="100%"
+                                                 style="border-top-width: 0px; border-left-width: 0px;
+                                                 border-right-width: 0px; border-bottom-width: 1px;"
+                                                 vflex="true" multiple="false">
                                             <listhead sizable="true">
                                                 <listheader id="cno" sort="auto" width="5%" label="No"/>
                                                 <listheader id="cnmprestasi" sort="auto" width="20%" label="Prestasi/Penghargaan"/>
