--- a/trunk/siak/web/WEB-INF/pages/irs/irs/irsDetail.zul
+++ b/trunk/siak/web/WEB-INF/pages/irs/irs/irsDetail.zul
@@ -210,8 +210,8 @@
                                     <listbox id="listDetilMatakuliah" width="100%" height="100%" multiple="false">
                                         <listhead sizable="true">
                                             <!--listheader id="cno" sort="auto" width="5%" label="No"/-->
-                                            <listheader id="mtbmtkl.ckdmtk" sort="auto" width="10%" label="Kode"/>
-                                            <listheader id="mtbmtkl.cnamamk" sort="auto" width="20%" label="Nama Matakuliah"/>
+                                            <listheader id="mtbmtkl_ckdmtk" sort="auto" width="10%" label="Kode"/>
+                                            <listheader id="mtbmtkl_cnamamk" sort="auto" width="20%" label="Nama Matakuliah"/>
                                             <listheader id="ckelompok" sort="auto" width="10%" label="Kelompok"/>
                                             <!--listheader id="cmun" sort="auto" width="10%" label="MUN"/-->
                                             <listheader id="nsks" sort="auto" width="10%" label="SKS"/>
