--- a/trunk/siak/web/WEB-INF/pages/administrasi/feedbackalumni/feedbackAlumniDetail.zul
+++ b/trunk/siak/web/WEB-INF/pages/administrasi/feedbackalumni/feedbackAlumniDetail.zul
@@ -140,89 +140,25 @@
                                 label="Jawaban"
                                 width="47%"/>
                 </listhead>
-                <!--&lt;!&ndash;radiogroup onCheck="choice.value = self.selectedItem.label"&ndash;&gt;-->
-                <!--<listitem id="ls" self="@{each='feedbackAlumni'}" value="@{feedbackAlumni}">-->
-                    <!--<listcell label="@{feedbackAlumni.mfeedback.nnopertanyaan}"-->
-                              <!--style="padding-left: 5px"/>-->
-                    <!--<listcell label="@{feedbackAlumni.mfeedback.cpertanyaan}"-->
-                              <!--style="padding-left: 5px"/>-->
-                    <!--<listcell id="lscell" style="padding-left: 5px">-->
-                        <!--<textbox-->
-                                                    <!--id="xsx"-->
-                                                    <!--value="@{feedbackAlumni.cjawaban}"-->
-                                                    <!--readonly="false" maxlength="1" width="10px" visible="true"/>-->
-                         <!--<textbox-->
-                                                    <!--id="idxc"-->
-                                                    <!--value="@{feedbackAlumni.id}"-->
-                                                    <!--readonly="false" maxlength="1" width="50px" visible="true"/>-->
-                        <!--<label value="Buruk Sekali"/>-->
-                        <!--<radiogroup id="rdi" name="@{feedbackAlumni.id}">-->
-                        <!--<radio id="child1" label="1"  radiogroup="rdi" />-->
-
-                        <!--<radio  id="child2" label="2"  radiogroup="rdi"  checked="true"/>-->
-
-                        <!--<radio  id="child3" label="3" radiogroup="rdi" onCheck="listBoxFeedbackAlumniDetail.selectedItem='selected'" />-->
-
-                        <!--<radio  id="child4" label="4" radiogroup="rdi" >-->
-                            <!--<attribute name="onCheck"><![CDATA[-->
-                                       <!--listBoxFeedbackAlumniDetail.onSelect ="true";-->
-                                   <!--]]>-->
-                            <!--</attribute>-->
-                        <!--</radio>-->
-                        <!--<radio  id="child5" label="5" radiogroup="rdi" value="@{feedbackAlumni.id}" checked="true">-->
-                            <!--<attribute name="onCheck"><![CDATA[-->
-                                      <!--child1.checked=false;-->
-                                      <!--child2.checked=true;-->
-                                      <!--child3.checked=false;-->
-                                      <!--child4.checked=false;-->
-                                      <!--child5.checked=true;-->
-                                   <!--]]>-->
-                            <!--</attribute>-->
-                        <!--</radio>-->
-                        <!--</radiogroup><label value="Baik Sekali"/>-->
-                    <!--</listcell>-->
-                <!--</listitem>-->
             </listbox>
-            <!--listbox id="listBoxFeedbackAlumniDetail"
-                         style="border-top-width: 0px; border-left-width: 0px; border-right-width: 0px; border-bottom-width: 1px;"
-                         model="@{controller.feedbacks}"
-                         selectedItem="@{controller.selectedFeedback}" vflex="true"
-                         tooltiptext="${c:l('listbox.tooltiptext')}" width="100%"
-                         height="100%" multiple="false">
-                    <listhead sizable="true">
-                        <listheader id="listheader_FeedbackAlumniDetailList_no"
-                                    sclass="FDListBoxHeader1" image="/images/icons/create_doc.gif"
-                                    label="No" sort="auto"
-                                    width="40px"/>
-                        <listheader id="listheader_FeedbackAlumniDetailList_pertanyaan"
-                                    sclass="FDListBoxHeader1" image="/images/icons/create_doc.gif"
-                                    label="Pertanyaan" sort="auto"
-                                    width="40%"/>
-                        <listheader id="listheader_FeedbackAlumniDetailList_1"
-                                    sclass="FDListBoxHeader1" image="/images/icons/create_doc.gif"
-                                    label="Jawaban" sort="auto"
-                                    width="300px"/>
-                    </listhead>
-                    <listitem self="@{each='feedback'}" value="@{feedback}">
-                        <listcell label="@{feedback.nnopertanyaan}"
-                                  style="padding-left: 5px"/>
-                        <listcell label="@{feedback.cpertanyaan}"
-                                  style="padding-left: 5px"/>
-                        <listcell style="padding-left: 5px">
-                            <label value="Buruk Sekali"/>
-                            <radiogroup>
-                            <radio id="radio1"/>
-                            <radio id="radio2"/>
-                            <radio id="radio3"/>
-                            <radio id="radio4"/>
-                            <radio id="radio5"/>
-                            </radiogroup>
-                            <label value="Baik Sekali"/>
-                        </listcell>
-                    </listitem>
-                </listbox-->
             </center>
-
+            <south>
+                <grid sclass="GridLayoutNoBorder" fixedLayout="true"
+                  style="border:0px; padding-left:5px; padding-right:5px;">
+                    <columns>
+                        <column width="99%"/>
+                        <column/>
+                    </columns>
+                    <rows>
+                        <row>
+                            <label value="Keterangan:"/>
+                        </row>
+                        <row>
+                            <label value="1.Buruk Sekali 2.Buruk 3.Cukup 4.Baik 5.Baik Sekali"/>
+                        </row>
+                    </rows>
+                </grid>
+            </south>
         </borderlayout>
 
     </window>
